# quicky-project

./: Cargo.toml  README.md
src/: cli.rs  io.rs  lib.rs  main.rs
