[package]
name = "qp" # quicky-project
version = "0.1.0"
edition = "2021"
authors = ["Kauê Fraga Rodrigues <kauefragarodrigues456@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
console = "0.15.2"
